--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section class="section" id="contato">
             <h2 class="section-title">Redes Sociais</h2>
             <div class="social-links">
-                <a href="https://www.instagram.com/@sarahhbd._" class="social-button instagram">
+                <a href="https://www.instagram.com/@sarahbd._" class="social-button instagram">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
                 <a href="https://www.tiktok.com/sasasaaayyy" class="social-button tiktok">
