--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
         <section class="section" id="contato">
             <h2 class="section-title">Redes Sociais</h2>
             <div class="social-links">
-                <a href="https://www.instagram.com/@sarahbd._" class="social-button instagram">
+                <a href="https://www.instagram.com/arthsntt" class="social-button instagram">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
-                <a href="https://www.tiktok.com/sasasaaayyy" class="social-button tiktok">
+                <a href="https://www.tiktok.com/arthsntt" class="social-button tiktok">
                     <i class="fab fa-tiktok"></i> TikTok
                 </a>
-                <a href="https://wa.me/5583981287289" class="social-button whatsapp">
+                <a href="https://wa.me/5583991816152" class="social-button whatsapp">
                     <i class="fab fa-whatsapp"></i> WhatsApp
                 </a>
                 <a href="#localizacao" class="social-button location">
