--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <div class="logo-container">
             <div class="logo">
-                <img src="https://i.postimg.cc/MZ148p3T/hellospotify.jpg" alt="Logo da Loja">
+                <img src="https://i.postimg.cc/bN1LzJc8/CLOSET-DELLAS-jpg.jpg" alt="Logo da Loja">
             </div>
-            <h1 class="company-name">Sarah Decorações</h1>
+            <h1 class="company-name">Closet Dellas</h1>
             <p class="welcome-text">Seja bem-vindo. Entre em contato aqui!</p>
         </div>
         <nav>
@@ -50,10 +50,10 @@
         <section class="section" id="contato">
             <h2 class="section-title">Redes Sociais</h2>
             <div class="social-links">
-                <a href="https://www.instagram.com/arthsntt" class="social-button instagram">
+                <a href="https://www.instagram.com/@arthsntt" class="social-button instagram">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
-                <a href="https://www.tiktok.com/arthsntt" class="social-button tiktok">
+                <a href="https://www.tiktok.com/@arthsntt" class="social-button tiktok">
                     <i class="fab fa-tiktok"></i> TikTok
                 </a>
                 <a href="https://wa.me/5583991816152" class="social-button whatsapp">
