--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     </div>
     
     <footer>
-        <p>&copy; 2025 Sarah Decorações - Todos os direitos reservados</p>
-        <p>Sua loja especializada em decorações</p>
+        <p>&copy; 2025 Closet Dellas - Todos os direitos reservados</p>
+        <p>Sua loja especializada em roupas</p>
     </footer>
     
     <script src="script.js"></script>
