--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h2 class="section-title">Nossa Localização</h2>
             <div class="location-info">
                 <p>
-                    <i class="fas fa-map-marker-alt"></i>  Rua Severino Massa Spinelli, 200, Tambau, jõao Pessoa - PB
+                    <i class="fas fa-map-marker-alt"></i>  Rua Severino Massa Spinelli, 277, Bessa, Belo horizonte - MG
                     <br>
                     <i class="fas fa-envelope"></i> CEP: 12345-678
                 </p>
