--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja de Roupas</title>
+    <title>Loja de Flores</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -12,13 +12,15 @@
     <header>
         <div class="logo-container">
             <div class="logo">
-                <img src="https://i.postimg.cc/bN1LzJc8/CLOSET-DELLAS-jpg.jpg" alt="Logo da Loja">
+                <img src="https://i.postimg.cc/439wSM8T/amorearte.jpg" alt="Logo da Loja">
             </div>
-            <h1 class="company-name">Closet Dellas</h1>
-            <p class="welcome-text">Seja bem-vindo. Entre em contato aqui!</p>
+            <h1 class="company-name">Amor e Arte</h1>
+            <p class="welcome-text">Bem-vindo à Amor e Arte!
+                Presentes feitos com carinho para eternizar momentos especiais.
+                </p>
         </div>
         <nav>
-            <a href="#produtos">Serviço</a>
+            <a href="#produtos">Produtos</a>
             <a href="#horarios">Horários</a>
             <a href="#contato">Contato</a>
             <a href="#localizacao">Localização</a>
@@ -36,13 +38,8 @@
         <section class="section" id="horarios">
             <h2 class="section-title">Horários de Atendimento</h2>
             <ul class="hours-list">
-                <li><span>Segunda-feira:</span> <span>08:00 - 17:00</span></li>
-                <li><span>Terça-feira:</span> <span>08:00 - 17:00</span></li>
-                <li><span>Quarta-feira:</span> <span>08:00 - 17:00</span></li>
-                <li><span>Quinta-feira:</span> <span>08:00 - 17:00</span></li>
-                <li><span>Sexta-feira:</span> <span>08:00 - 17:00</span></li>
-                <li><span>Sábado:</span> <span>08:00 - 17:00</span></li>
-                <li><span>Domingo:</span> <span>Fechado</span></li>
+                <li><span>Segunda a Sábado:</span> <span>08:00 - 18:00</span></li>
+                <li><span>Domingo:</span> <span>08:00 - 12:00</span></li>
             </ul>
         </section>
 
@@ -50,13 +47,13 @@
         <section class="section" id="contato">
             <h2 class="section-title">Redes Sociais</h2>
             <div class="social-links">
-                <a href="https://www.instagram.com/arthsntt" class="social-button instagram">
+                <a href="https://www.instagram.com/amorearttep" class="social-button instagram">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
-                <a href="https://www.tiktok.com/@arthsntt" class="social-button tiktok">
+                <a href="https://www.tiktok.com/@amorearttep" class="social-button tiktok">
                     <i class="fab fa-tiktok"></i> TikTok
                 </a>
-                <a href="https://wa.me/+5583991816152" class="social-button whatsapp">
+                <a href="https://wa.me/+5511934660856" class="social-button whatsapp">
                     <i class="fab fa-whatsapp"></i> WhatsApp
                 </a>
                 <a href="#localizacao" class="social-button location">
@@ -90,9 +87,9 @@
             <h2 class="section-title">Nossa Localização</h2>
             <div class="location-info">
                 <p>
-                    <i class="fas fa-map-marker-alt"></i>  Rua Severino Massa Spinelli, 277, Bessa, Belo Horizonte - MG
+                    <i class="fas fa-map-marker-alt"></i>  Rua Três Riachos, Cachoeira, Bahia, Brasil 
                     <br>
-                    <i class="fas fa-envelope"></i> CEP: 12345-678
+                    <i class="fas fa-envelope"></i> CEP: 44300-000
                 </p>
             </div>
         </section>
@@ -128,8 +125,8 @@
     </div>
     
     <footer>
-        <p>&copy; 2025 Closet Dellas - Todos os direitos reservados</p>
-        <p>Sua loja especializada em roupas</p>
+        <p>&copy; 2025 Amor e arte - Todos os direitos reservados</p>
+        <p>Sua loja especializada em presentes</p>
     </footer>
     
     <script src="script.js"></script>
