--- a/index.html
+++ b/index.html
@@ -42,7 +42,22 @@
                 <li><span>Domingo:</span> <span>08:00 - 12:00</span></li>
             </ul>
         </section>
-
+        
+        <!-- ALTERAÇÃO: Seção de produtos (catálogo) movida para antes da seção de contato -->
+        <section class="section" id="produtos">
+            <h2 class="section-title">Catálogo</h2>
+            <div class="search-container">
+                <div class="search-box">
+                    <input type="text" id="searchInput" placeholder="Pesquisar produtos...">
+                    <button id="searchButton">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="catalog" id="catalog">
+                <!-- Os produtos serão inseridos aqui via JavaScript -->
+            </div>
+        </section>
 
         <section class="section" id="contato">
             <h2 class="section-title">Redes Sociais</h2>
@@ -65,23 +80,6 @@
                 <i class="fab fa-whatsapp"></i> Compartilhar no WhatsApp
             </a>
         </section>
-
-
-        <section class="section" id="produtos">
-            <h2 class="section-title">Catálogo</h2>
-            <div class="search-container">
-                <div class="search-box">
-                    <input type="text" id="searchInput" placeholder="Pesquisar produtos...">
-                    <button id="searchButton">
-                        <i class="fas fa-search"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="catalog" id="catalog">
-                <!-- Os produtos serão inseridos aqui via JavaScript -->
-            </div>
-        </section>
-
 
         <section class="section" id="localizacao">
             <h2 class="section-title">Nossa Localização</h2>
