--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <header>
         <div class="logo-container">
             <div class="logo">
-                <img src="https://i.postimg.cc/439wSM8T/amorearte.jpg" alt="Logo da Loja">
+                <img src="https://i.postimg.cc/65Wz3j7G/CLOSET-DELLAS-jpg.jpg" alt="Logo da Loja">
             </div>
             <h1 class="company-name">Amor e Arte</h1>
-            <p class="welcome-text">Bem-vindo à Amor e Arte!
-                Presentes feitos com carinho para eternizar momentos especiais.
-                </p>
+            <p class="welcome-text">Bem-vindo à closet dellas!
+            </p>
         </div>
         <nav>
             <a href="#produtos">Produtos</a>
@@ -62,13 +61,13 @@
         <section class="section" id="contato">
             <h2 class="section-title">Redes Sociais</h2>
             <div class="social-links">
-                <a href="https://www.instagram.com/amorearttep" class="social-button instagram">
+                <a href="https://www.instagram.com/arthur.fellpp" class="social-button instagram">
                     <i class="fab fa-instagram"></i> Instagram
                 </a>
-                <a href="https://www.tiktok.com/@amorearttep" class="social-button tiktok">
+                <a href="https://www.tiktok.com/@arthsntt" class="social-button tiktok">
                     <i class="fab fa-tiktok"></i> TikTok
                 </a>
-                <a href="https://wa.me/+5511934660856" class="social-button whatsapp">
+                <a href="https://wa.me/+5583991816152" class="social-button whatsapp">
                     <i class="fab fa-whatsapp"></i> WhatsApp
                 </a>
                 <a href="#localizacao" class="social-button location">
@@ -87,7 +86,7 @@
                 <p>
                     <i class="fas fa-map-marker-alt"></i>  Rua Três Riachos, Cachoeira, Bahia, Brasil 
                     <br>
-                    <i class="fas fa-envelope"></i> CEP: 44300-000
+                    <i class="fas fa-envelope"></i> CEP: 12345-678
                 </p>
             </div>
         </section>
@@ -123,8 +122,8 @@
     </div>
     
     <footer>
-        <p>&copy; 2025 Amor e arte - Todos os direitos reservados</p>
-        <p>Sua loja especializada em presentes</p>
+        <p>&copy; 2025 Closet Deellas - Todos os direitos reservados</p>
+        <p>Sua loja especializada em roupas</p>
     </footer>
     
     <script src="script.js"></script>
