--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="logo-container">
             <div class="logo">
-                <img src="https://i.postimg.cc/439wSM8T/amorearte.jpg" alt="Logo da Loja">
+                <img src="https://i.postimg.cc/65Wz3j7G/CLOSET-DELLAS-jpg.jpg" alt="Logo da Loja">
             </div>
             <h1 class="company-name">Amor e Arte</h1>
             <p class="welcome-text">Bem-vindo à Amor e Arte!
