--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <h2 class="section-title">Horários de Atendimento</h2>
             <ul class="hours-list">
                 <li><span>Segunda a Sexta:</span> <span>09:00 - 18:00</span></li>
+                <li><span>Sábado</span> <span>09:00 - 13h</span></li>
                 <li><span>Domingo</span> <span> Fechado</span></li>
             </ul>
         </section>
