--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="https://i.postimg.cc/65Wz3j7G/CLOSET-DELLAS-jpg.jpg" alt="Logo da Loja">
             </div>
             <h1 class="company-name">Closet Dellas</h1>
-            <p class="welcome-text">Bem-vindo à Closet Deellas! Faça já o seu pedido!</p>
+            <p class="welcome-text">Bem-vindo à Closet Dellas! Faça já o seu pedido!</p>
         </div>
         <nav>
             <a href="#horarios">Horários</a>
