--- a/index.html
+++ b/index.html
@@ -32,19 +32,15 @@
     </header>
 
     <main>
-        <!-- Seção de Horários -->
-        <section class="section" id="horarios">
-            <h2 class="section-title">Horários de Funcionamento</h2>
-            <ul class="hours-list">
-                <li><span>Segunda-feira:</span> <span>09:00 - 18:00</span></li>
-                <li><span>Terça-feira:</span> <span>09:00 - 18:00</span></li>
-                <li><span>Quarta-feira:</span> <span>09:00 - 18:00</span></li>
-                <li><span>Quinta-feira:</span> <span>09:00 - 18:00</span></li>
-                <li><span>Sexta-feira:</span> <span>09:00 - 18:00</span></li>
-                <li><span>Sábado:</span> <span>09:00 - 13:00</span></li>
-                <li><span>Domingo:</span> <span>Fechado</span></li>
-            </ul>
-        </section>
+        <!-- Seção de Horários Simplificados -->
+<section class="section" id="horarios">
+    <h2 class="section-title">Horários de Funcionamento</h2>
+    <ul class="hours-list">
+        <li><span>Segunda a Sexta:</span> <span>09:00 - 18:00</span></li>
+        <li><span>Sábado:</span> <span>09:00 - 13:00</span></li>
+        <li><span>Domingo:</span> <span>Fechado</span></li>
+    </ul>
+</section>
 
         <!-- Seção de Produtos/Catálogo -->
         <section class="section" id="produtos">
