--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                 <p>Estamos localizados na Rua da Praia, 123 - João Pessoa, PB.</p>
                 <p>Venha nos visitar e confira nossas peças exclusivas!</p>
             </div>
+            <div class="social-links">
+                <a href="https://maps.app.goo.gl/bGNWmxNbjNZQTpjr5" class="social-button location" target="_blank">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <span>Ver no Google Maps</span>
+                </a>
+            </div>
         </section>
     </main>
 
