Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                     <i class="fab fa-whatsapp"></i>
                     <span>WhatsApp</span>
                 </a>
-                <a href="https://www.instagram.com/closetdellas/" class="social-button instagram" target="_blank">
+                <a href="https://www.instagram.com/arthur.fellp/" class="social-button instagram" target="_blank">
                     <i class="fab fa-instagram"></i>
                     <span>Instagram</span>
                 </a>
-                <a href="https://www.tiktok.com/@closetdellas" class="social-button tiktok" target="_blank">
+                <a href="https://www.tiktok.com/@arthsntt" class="social-button tiktok" target="_blank">
                     <i class="fab fa-tiktok"></i>
                     <span>TikTok</span>
                 </a>
