--- a/index.html
+++ b/index.html
@@ -66,22 +66,12 @@
         <section class="section" id="contato">
             <h2 class="section-title">Entre em Contato</h2>
             <div class="social-links">
-                <a href="https://wa.me/+5583991816152" class="social-button whatsapp" target="_blank">
-                    <i class="fab fa-whatsapp"></i>
-                    <span>WhatsApp</span>
-                </a>
-                <a href="https://www.instagram.com/arthur.fellp/" class="social-button instagram" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                    <span>Instagram</span>
-                </a>
-                <a href="https://www.tiktok.com/@arthsntt" class="social-button tiktok" target="_blank">
-                    <i class="fab fa-tiktok"></i>
-                    <span>TikTok</span>
-                </a>
-            </div>
-            <a href="#" id="shareButton" class="share-button">
-                <i class="fas fa-share-alt"></i> Compartilhar Loja
-            </a>
+                <div class="floating-social-links">
+                    <a href="#" class="social-icon whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
+                    <a href="#" class="social-icon instagram-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-icon tiktok-icon"><i class="fab fa-tiktok"></i></a>
+                    <a href="#" class="social-icon location-icon"><i class="fas fa-map-marker-alt"></i></a>
+                </div>
         </section>
 
         <!-- Seção de Localização -->
@@ -89,7 +79,7 @@
             <h2 class="section-title">Nossa Localização</h2>
             <div class="location-info">
                 <p>Estamos localizados na Rua da Praia, 123 - João Pessoa, PB.</p>
-                <p>Venha nos visitar e confira nossas peças exclusivas!</p>
+                
             </div>
             <div class="social-links">
                 <a href="https://maps.app.goo.gl/bGNWmxNbjNZQTpjr5" class="social-button location" target="_blank">
