--- a/index.html
+++ b/index.html
@@ -63,30 +63,20 @@
         </section>
 
         <!-- Seção de Contato -->
-        <section class="section" id="contato">
-            <h2 class="section-title">Entre em Contato</h2>
-            <div class="social-links">
-                <div class="floating-social-links">
-                    <a href="#" class="social-icon whatsapp-icon"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#" class="social-icon instagram-icon"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="social-icon tiktok-icon"><i class="fab fa-tiktok"></i></a>
-                    <a href="#" class="social-icon location-icon"><i class="fas fa-map-marker-alt"></i></a>
-                </div>
-        </section>
-
-        <!-- Seção de Localização -->
-        <section class="section" id="localizacao">
-            <h2 class="section-title">Nossa Localização</h2>
-            <div class="location-info">
-                <p>Estamos localizados na Rua da Praia, 123 - João Pessoa, PB.</p>
-                
-            </div>
-            <div class="social-links">
-                <a href="https://maps.app.goo.gl/bGNWmxNbjNZQTpjr5" class="social-button location" target="_blank">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <span>Ver no Google Maps</span>
-                </a>
-            </div>
+<div class="social-links-container">
+    <a href="https://wa.me/+5583991816152" class="social-button whatsapp" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="https://www.instagram.com/closetdellas/" class="social-button instagram" target="_blank">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.tiktok.com/@closetdellas" class="social-button tiktok" target="_blank">
+        <i class="fab fa-tiktok"></i>
+    </a>
+    <a href="https://maps.app.goo.gl/bGNWmxNbjNZQTpjr5" class="social-button location" target="_blank">
+        <i class="fas fa-map-marker-alt"></i>
+    </a>
+</div>
         </section>
     </main>
 
