--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <a href="https://wa.me/+5583991816152" class="social-button whatsapp" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
-    <a href="https://www.instagram.com/closetdellas/" class="social-button instagram" target="_blank">
+    <a href="https://www.instagram.com/arthur.fellp/" class="social-button instagram" target="_blank">
         <i class="fab fa-instagram"></i>
     </a>
-    <a href="https://www.tiktok.com/@closetdellas" class="social-button tiktok" target="_blank">
+    <a href="https://www.tiktok.com/@arthsntt" class="social-button tiktok" target="_blank">
         <i class="fab fa-tiktok"></i>
     </a>
     <a href="https://maps.app.goo.gl/bGNWmxNbjNZQTpjr5" class="social-button location" target="_blank">
